# Task-3

./: README.md
emergency_landing_sim/: README.md  package.xml  setup.cfg  setup.py
emergency_landing_sim/emergency_landing_sim/: emergency_landing_node.py  gazebo_cmdvel_bridge.py  rotor_spin_node.py
emergency_landing_sim/launch/: sim_6depth_gazebo.launch.py
emergency_landing_sim/rviz/: 6depth_gazebo.rviz
emergency_landing_sim/urdf/: pixhawk450_6depth.urdf.xacro
emergency_landing_sim/worlds/: emergency_landing.world
