<?xml version="1.0"?>
<package format="3">

  <name>emergency_landing_sim</name>
  <version>0.0.1</version>
  <description>Gazebo + RViz simulation model for a Pixhawk 450-style drone with 6 depth sensors</description>

  <maintainer email="user@example.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 -->
  <exec_depend>rclpy</exec_depend>

  <!-- Messages -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <!-- Gazebo -->
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <!-- Robot model -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- Launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
